2007-10-05  Marcus Brinkmann  <marcus@g10code.de>

	* assuan-defs.h (_assuan_sock_wsa2errno) [HAVE_W32_SYSTEM]: Add prototype.
	* assuan-uds.c (wsa2errno) [HAVE_W32_SYSTEM]: Move and rename to ...
	* assuan-socket.c (_assuan_sock_wsa2errno) [HAVE_W32_SYSTEM]: ... this.
	(_assuan_close, _assuan_sock_new, _assuan_sock_connect, _assuan_sock_bind):
	Always set errno on error.

	* assuan-uds.c (wsa2errno) [HAVE_W32_SYSTEM]: New function.
	(uds_reader, uds_writer) [HAVE_W32_SYSTEM]: Set errno.

2007-10-04  Werner Koch  <wk@g10code.com>

	* mkerrors: Map EAGAIN to GPG_ERR_EAGAIN for read and write
	errors. 

2007-10-02  Werner Koch  <wk@g10code.com>

	* assuan-io.c (_assuan_io_read) [W32]: Map WSAEWOULDBLOCK to EAGAIN.
	* assuan-socket.c (_assuan_sock_check_nonce): N needs to be signed.

	* assuan-defs.h (struct assuan_context_s): Add LISTEN_NONCE.
	* assuan-socket-server.c (assuan_set_sock_nonce): New.
	(accept_connection): Check the nonce.

2007-10-01  Werner Koch  <wk@g10code.com>

	* assuan.h (ASSUAN_INT2FD, ASSUAN_FD2INT): New.

	* assuan-socket.c: Rewritten.
	(assuan_sock_new, assuan_sock_connect, assuan_sock_bind) 
	(assuan_sock_get_nonce, assuan_sock_check_nonce): New APIs.

	* assuan-io.c (_assuan_simple_read, _assuan_simple_write):
	Factored code out to ...
	(_assuan_io_read, _assuan_io_write): .. new.
	* assuan-io-pth.c (_assuan_io_read, _assuan_io_write): New.

2007-09-25  Werner Koch  <wk@g10code.com>

	* assuan.h (_assuan_gpg_strerror_r, _assuan_gpg_strsource): Add
	wrappers for these new internal functions.

2007-09-24  Marcus Brinkmann  <marcus@g10code.de>

	* assuan-uds.c (uds_reader) [HAVE_W32_SYSTEM]: Do not touch the
	UDS structure in the context.  Reported by Frank Osterfeld.
	(uds_writer): Clarify code.

2007-09-14  Marcus Brinkmann  <marcus@g10code.de>

	* assuan-pipe-connect.c (do_finish) [HAVE_W32_SYSTEM]: Close
	ctx->pid as handle.
	(pipe_connect_w32): Save the spawned processes handle.

2007-09-13  Werner Koch  <wk@g10code.com>
