@@ -185,7 +185,8 @@
 #define _assuan_simple_recvmsg _ASSUAN_PREFIX(_assuan_simple_recvmsg)
 #define _assuan_simple_sendmsg _ASSUAN_PREFIX(_assuan_simple_sendmsg)
 #define _assuan_waitpid _ASSUAN_PREFIX(_assuan_waitpid)
-#define _assuan_sock_close       _ASSUAN_PREFIX(_assuan_close)      
+#define _assuan_sock_wsa2errno   _ASSUAN_PREFIX(_assuan_sock_wsa2errno)      
+#define _assuan_sock_close       _ASSUAN_PREFIX(_assuan_sock_close)      
 #define _assuan_sock_new         _ASSUAN_PREFIX(_assuan_sock_new)        
 #define _assuan_sock_connect     _ASSUAN_PREFIX(_assuan_sock_connect)    
 #define _assuan_sock_bind        _ASSUAN_PREFIX(_assuan_sock_bind)       
